fixed align items in main to flex end instead

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ main {
   padding: 2rem 3rem 8rem 3rem;
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
 }
 
 /* Dice */
